# lorenzetti

./: .gitignore  CMakeLists.txt  Makefile  README.md  Untitled.ipynb  config.json
.github/workflows/: pages.yml  reco_sequence.yml  test_sequence.yml
.github/workflows/tests/: test_local.sh
TEST/: Simulation.ipynb  Untitled.ipynb  brl.json  dead_modules.json  digitization.ipynb
TEST/.ipynb_checkpoints/: Simulation-checkpoint.ipynb  digitization-checkpoint.ipynb
ci_tests/: reco_sequence.yml
core/G4Kernel/: CMakeLists.txt
core/G4Kernel/G4Kernel/: ComponentAccumulator.h  RunManager.h  RunSequence.h
core/G4Kernel/python/: ComponentAccumulator.py  __init__.py
core/G4Kernel/src/: ComponentAccumulator.cxx  LinkDef.h  RunManager.cxx  RunSequence.cxx
core/GaugiKernel/GaugiKernel/: ComponentAccumulator.h  DataHandle.h
core/GaugiKernel/cmake/: lzt_setup.sh
core/GaugiKernel/python/: ComponentAccumulator.py
core/GaugiKernel/src/: ComponentAccumulator.cxx
doc/: Doxyfile  generate_cxx_rst.py  requirements_doc.txt  setup_doc_env.py
doc/source/: conf.py  index.rst  introduction.rst
doc/source/tutorials/: index.rst
docs/: anomaly.html  digitization.html  generation.html  installation.md  reconstruction.md  usage.html
docs/.ipynb_checkpoints/: generation-checkpoint.ipynb
docs/notebooks/: Usage.ipynb  usage.ipynb
docs/notebooks/.ipynb_checkpoints/: usage-checkpoint.ipynb
events/CaloCluster/src/: CaloClusterConverter.cxx
examples/anomalies_example/: anomalies_config.json
examples/anomalies_scripts/: rename_branches.ipynb
examples/productions/: mc25_13TeV.20251215.physics_Main.Zee.500k.py  mc25_13TeV.20251226.physics_Main.JF17.500k.py  mc25_13TeV.20260108.physics_Main.MB_avgmu1.1k.py  mc25_13TeV.20260108.physics_Main.MB_avgmu10.1k.py
generator/filters/scripts/: gen_jets.py  gen_single.py  gen_zee.py
geometry/: CMakeLists.txt
geometry/generic/: CMakeLists.txt
geometry/generic/python/: __init__.py
geometry/generic/src/: DetectorConstruction.cxx
geometry/python/: Calorimeter.py  DetectorConstruction.py  DetectorConstruction_v1.py  __init__.py
geometry/python/detectors/: DeadMaterials.py  ECAL.py  EMEC.py  HEC.py  TILE.py  Tracking.py
geometry/python/v1/: DeadMaterials.py  ECAL.py  EMEC.py  HEC.py  PhysicalVolume.py  SensitiveDetector.py  TILE.py  Tracking.py  __init__.py
geometry/simple/: CMakeLists.txt
geometry/simple/simple/: SimpleDetectorConstruction.h
geometry/simple/src/: SimpleDetectorConstruction.cxx
geometry/src/: DetectorConstruction_v1.cxx  DetectorConstruction_v1.h  LinkDef.h
notebooks/: anomaly.ipynb  generation.ipynb  installation.md  simulation.ipynb
(+92 files in other folders)
